--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -56,8 +56,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_THEIR_TURN</zType>
-		<Translation>{0}'s Zug{true_1:
-{1}{YIELD_ORDERS}}</Translation>
+		<Translation>{0_player}'s Zug {true_1:{1_orders}{YIELD_ORDERS}}</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_HOTSEAT_PLAYER</zType>
@@ -786,7 +785,7 @@ Luxusgüter werden freigeschaltet, indem man Spezialisten auf Verbesserungen ers
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_TOOLTIP_LUXURIES_NONE</zType>
-		<Translation>Nicht Verfügbar</Translation>
+		<Translation>Nichts Verfügbar</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_TOOLTIP_TRADABLE</zType>
@@ -1401,6 +1400,10 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
 	<Entry>
 		<zType>TEXT_CLOUD_SCREEN_DELETE_GAME</zType>
 		<Translation>Löschen</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CLOUD_SCREEN_HOST_CONTROLS</zType>
+		<Translation>Host Controls</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CLOUD_SCREEN_USER_TITLE</zType>
